# hovinen-tech.github.io

./: CNAME  _config.yml  about.de.html  about.html  blog.html  case-studies.de.html  case-studies.html  categories.html  dprint.json  email-sent.de.html  email-sent.html  feed-full.xml  imprint.de.html  imprint.html  index.de.html  index.html  privacy.de.html  privacy.html  tags.html
.github/workflows/: ci.yml
_attachments/: icons8-team-r-enaopw8rs-unsplash.html  mail-backend-architecture-drawio.html  mail-backend-e2e-test-drawio.html  mail-backend-unit-tests-drawio.html  newton-1.html  newton-2.html  sunbeam-photography-db0nyn8wlga-unsplash.html
_includes/: analytics.html  captcha.html  external-links.html  footer.de.html  footer.html  head.html  image.html  navbar.de.html  navbar.html  scripts.html  scroll-to-top.html
_layouts/: default.html  post.html
_posts/: 2012-12-01-on-newton-iteration.html  2015-06-21-cleaner-assertions-with-matchers.html  2015-06-23-testing-mapping-code-in-java-8.html  2015-08-23-dealing-with-entities-with-mutable-state.html  2016-04-17-java-date-formatting-aka-murphys-law.html  2017-07-09-just-say-no-to-orm.html  2018-03-07-decoupling-youre-gonna-need-it.html  2020-12-29-on-time-bombs-tar-pits-and-booby-traps.html  2021-01-03-cross-team-mandates.html  2021-01-23-technical-design-as-an-hourglass.html  2023-06-06-demystifying-trait-generics-in-rust.html  2023-08-29-agile-like-you-mean-it.html  2023-12-07-exploring-the-aws-lambda-sdk-in-rust.html  2024-04-04-migrating-my-blog.md  2024-04-08-clean-code-horrible-performance-so-what.md  2024-04-27-machine-learning-in-rust-part-1.md  2024-04-29-machine-learning-in-rust-part-2.md  2024-05-02-machine-learning-in-rust-part-3.md  2024-10-25-what-do-we-want-in-a-test-suite.md  2025-01-11-experimenting-with-high-performance-rust.md  2025-08-30-ai-assisted-coding.md  2026-06-24-introducing-test-that.md
assets/2024/04/: tic-tac-toe-games.webm
backend/: deploy.nu
backend/send-contact-form-message/: Cargo.toml
backend/send-contact-form-message/assets/: send-error.de.html.tmpl  send-error.html.tmpl
backend/send-contact-form-message/src/: error_page.rs  friendlycaptcha.rs  main.rs  secrets.rs
backend/send-contact-form-message/tests/: lib.rs
backend/test-support/: Cargo.toml
backend/test-support/src/: fake_friendlycaptcha.rs  lib.rs  localstack_config.rs  secrets.rs
contact-backend/: Cargo.toml
contact-backend/src/: main.rs
css/: base.css  base.scss  footer.css  footer.scss  main-banner.css  main-banner.scss  main-navigation.css  main-navigation.scss  project-card.css  project-card.scss  style.css
js/: scroll-to-top.js
send-contact-form-message/: Cargo.toml  deploy.nu
send-contact-form-message/backend-lambda/: Cargo.toml
send-contact-form-message/backend-lambda/assets/: .gitignore  send-error.html
send-contact-form-message/backend-lambda/src/: error_page.rs  main.rs  secrets.rs
send-contact-form-message/backend-lambda/tests/: lib.rs
send-contact-form-message/send-contact-form-message/src/: main.rs
send-contact-form-message/send-contact-form-message/tests/: lib.rs
send-contact-form-message/src/: main.rs
send-contact-form-message/test-support/: Cargo.toml
send-contact-form-message/test-support/src/: fake_friendlycaptcha.rs  fake_smtp.rs  lib.rs  localstack_config.rs
send-contact-form-message/tests/: fake_smtp.rs  lib.rs  localstack_config.rs
send-contact-form-message/tests/common/: fake_friendlycaptcha.rs  mod.rs
