[package]
name = "contact-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
lazy_static = "1.4.0"
lettre = { version = "0.11.1", features = ["tokio1", "tokio1-native-tls"] }
log = "0.4.20"
serde = { version = "1.0.190", features = ["serde_derive"] }
simple_logger = "4.2.0"
