[package]
name = "send-contact-form-message"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
lazy_static = "1.4.0"
lettre = { version = "0.11.1", features = ["tokio1", "tokio1-native-tls"] }
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
