[package]
name = "send-contact-form-message"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-once-cell = "0.5.3"
aws-config = "1.0.1"
aws-sdk-secretsmanager = "1.3.0"
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
lettre = { version = "0.11.1", features = ["rustls-tls", "tokio1", "tokio1-rustls-tls", "smtp-transport", "pool", "hostname", "builder"], default-features = false }
reqwest = { version = "0.11.22", features = ["rustls", "tokio-rustls", "json", "__tls", "__rustls", "rustls-tls"], default-features = false }
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.108"
tinytemplate = "1.2.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[dev-dependencies]
test-support = { path = "../test-support" }
aws-sdk-lambda = "1.3.0"
googletest = "0.11.0"
log = "0.4.20"
serial_test = "2.0.0"
rustls = "0.23.14"
